# Img2txt

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Img2txt_20.qrc  Img2txt_20.ui  LICENSE  README.md  app_resources.rc  build_release.ps1  build_release.sh  main.cpp
Img2txt/: FenetreCalibrage.cpp  FenetreCalibrage.h  FenetreChargement.cpp  FenetreChargement.h  Img2txt.cpp  Img2txt.vcxproj  fonctions.cpp  fonctions.h  img2txt_20.cpp  img2txt_20.h  stb_impl.cpp
